@@ -5,15 +5,15 @@
 	<parent>
 		<groupId>eu.europa.ec.joinup.sd-dss</groupId>
 		<artifactId>sd-dss</artifactId>
-		<version>5.1-SNAPSHOT</version>
+		<version>5.4-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>sscd-mocca-adapter</artifactId>
 	
 	<repositories>
 		<repository>
-            <id>joinup-dss-thirdparty</id>
-            <url>http://joinup.ec.europa.eu/site/sd-dss/maven2</url>
+            <id>E-Government Innovationszentrum - EGIZ</id>
+            <url>https://apps.egiz.gv.at/maven/</url>
         </repository>
 	</repositories>
 
@@ -21,7 +21,7 @@
 		<dependency>
 			<groupId>at.gv.egiz</groupId>
 			<artifactId>smcc</artifactId>
-			<version>1.3.16</version>
+			<version>1.3.30</version>
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
@@ -40,4 +40,39 @@
 		</dependency>
 	</dependencies>
 
+	<profiles>
+		<profile>
+            <id>jdk19-plus</id>
+            <activation>
+                <jdk>[9,)</jdk>
+            </activation>
+            
+            <build>
+				<plugins>
+					<plugin>
+						<artifactId>maven-compiler-plugin</artifactId>
+						<configuration>
+							<source>9</source>
+							<target>9</target>
+	                        <compilerArgs>
+								<arg>--add-modules</arg>
+								<arg>java.smartcardio</arg>
+							</compilerArgs>
+						</configuration>
+					</plugin>
+					<plugin>
+	                    <groupId>org.apache.maven.plugins</groupId>
+	                    <artifactId>maven-javadoc-plugin</artifactId>
+	                    <configuration>
+	                        <additionalJOptions>
+	                         <additionalJOption>-html5</additionalJOption>
+	                            <additionalJOption>--add-modules</additionalJOption>
+	                            <additionalJOption>java.smartcardio</additionalJOption>
+	                        </additionalJOptions>
+	                    </configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
